[project]
name = "discrete-fourier"
version = "0.1.0"
description = "Tool to calculate discrete Fourier coefs"
authors = [
    {name = "Ricardo Marcelo Alvarez",email = "rmalvarezkai@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "numpy>=1.20.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.4,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "ta-lib (>=0.6.8,<0.7.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "ehdtd (>=0.2.37,<0.3.0)",
]
