[project]
name = "discrete-fourier"
version = "0.3.7"
description = "Calculate discrete Fourier coefficients, detect periods, and validate periodic patterns"
authors = [
    {name = "Ricardo Marcelo Alvarez",email = "rmalvarezkai@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<=3.14"
dependencies = [
    "numpy>=2.4.6",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "ehdtd>=0.2.41",
    "ipykernel>=7.3.0",
    "plotly>=6.8.0",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0.3",
    "ta-lib>=0.6.8",
]

